--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
 				<h1>BRAZAFRAZA</h1>
-				<p>Welcome to my site! My name is Brodie Frazier, and I'm working on some exciting projects. Check out my <a href="https://brodie-frazier.itch.io">itch.io page</a> for game updates!</p>
+				<p>Welcome to my site! My name is Brodie Frazier, an indie game developer specializing in design and production. This website is still under construction, but I'm working on some exciting projects! Check them out on my <a href="https://brodie-frazier.itch.io">itch.io page</a> for now!</p>
 				<ul class="actions">
 					<li><a href="#one" class="button scrolly">Learn more</a></li>
 				</ul>
@@ -42,10 +42,11 @@
 				<a href="#" class="image"><img src="images/pic01.jpg" alt="Project Image" data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
-						<h2>Project Title 1</h2>
-						<p>Brief description of this project. This could include technologies used, unique features, or what inspired the project.</p>
+						<h2>No Strings Attached</h2>
+						<h3>Lead Designer, Producer</h3>
+						<p>Beat your friends down in this string puppet fighting game!</p>
 						<ul class="actions">
-							<li><a href="generic.html" class="button">Learn more</a></li>
+							<li><a href="https://locstock.itch.io/no-strings-attached" class="button" target="_blank">Learn more</a></li>
 						</ul>
 					</div>
 				</div>
@@ -54,10 +55,11 @@
 				<a href="#" class="image"><img src="images/pic02.jpg" alt="Project Image" data-position="top center" /></a>
 				<div class="content">
 					<div class="inner">
-						<h2>Project Title 2</h2>
-						<p>Brief description of this project, highlighting its goals, challenges, and results.</p>
+						<h2>Mind's Isle</h2>
+						<h3>Solo project</h3>
+						<p>Explore and survive on the mind's isle in this sandbox survival game.</p>
 						<ul class="actions">
-							<li><a href="generic.html" class="button">Learn more</a></li>
+							<li><a href="https://brodie-frazier.itch.io/minds-isle" class="button" target="_blank">Learn more</a></li>
 						</ul>
 					</div>
 				</div>
@@ -66,10 +68,11 @@
 				<a href="#" class="image"><img src="images/pic03.jpg" alt="Project Image" data-position="25% 25%" /></a>
 				<div class="content">
 					<div class="inner">
-						<h2>Project Title 3</h2>
-						<p>Short summary describing the project's purpose and any notable outcomes.</p>
+						<h2>Final Hour</h2>
+						<h3>Level Designer, Sound Designer</h3>
+						<p>A spaceship drifting, a man in an escape pod, a crew on edge. All you have is these last few hours to solve it all.</p>
 						<ul class="actions">
-							<li><a href="generic.html" class="button">Learn more</a></li>
+							<li><a href="https://gaivaige.itch.io/final-hour" class="button" target="_blank">Learn more</a></li>
 						</ul>
 					</div>
 				</div>
@@ -83,7 +86,7 @@
 				<p>If you'd like to connect, feel free to reach out! You can also find me on my social media links below.</p>
 				<div class="split style1">
 					<section>
-						<form method="post" action="#">
+						<form method="post" action="mailto:brodiefrazier@gmail.com" enctype="text/plain">
 							<div class="fields">
 								<div class="field half">
 									<label for="name">Name</label>
@@ -105,6 +108,7 @@
 					</section>
 					<section>
 						<ul class="contact">
+							<!--
 							<li>
 								<h3>Address</h3>
 								<span>
@@ -113,20 +117,23 @@
 									USA
 								</span>
 							</li>
+							-->
 							<li>
 								<h3>Email</h3>
-								<a href="mailto:yourname@brazafraza.com">yourname@brazafraza.com</a>
+								<a href="mailto:brodiefrazier@gmail.com">brodiefrazier@gmail.com</a>
 							</li>
+							<!--
 							<li>
 								<h3>Phone</h3>
 								<span>(000) 000-0000</span>
 							</li>
+							-->
 							<li>
 								<h3>Social</h3>
 								<ul class="icons">
-									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+									<li><a href="https://www.linkedin.com/in/brodie-frazier-a5a384294/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/brazafraza" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://brodie-frazier.itch.io" class="icon solid fa-gamepad"><span class="label">Itch.io</span></a></li>
 								</ul>
 							</li>
 						</ul>
