Added image, test colour change

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<link rel="icon" type="image/jpg" href="/images/braza.jpg">
+	<link rel="icon" type="image/png" href="/images/brazafraza.png">
 	<title>BRAZAFRAZA</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -29,7 +29,7 @@
 		<!-- Intro -->
 		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
-				<h1>BRAZAFRAZA</h1>
+				<h1>BRAZAFRAZA <img src="/images/brazafraza.png" alt="Favicon" style="float: right; width: 32px; height: 32px;"></h1>
 				<p>Welcome to my site! My name is Brodie Frazier, an indie game developer specializing in design and production. This website is still under construction, but I'm working on some exciting projects! Check them out on my <a href="https://brodie-frazier.itch.io">itch.io page</a> for now!</p>
 				<ul class="actions">
 					<li><a href="#one" class="button scrolly">Learn more</a></li>
@@ -109,26 +109,10 @@
 					</section>
 					<section>
 						<ul class="contact">
-							<!--
-							<li>
-								<h3>Address</h3>
-								<span>
-									12345 Somewhere Road #654<br />
-									Nashville, TN 00000-0000<br />
-									USA
-								</span>
-							</li>
-							-->
 							<li>
 								<h3>Email</h3>
 								<a href="mailto:brodiefrazier@gmail.com">brodiefrazier@gmail.com</a>
 							</li>
-							<!--
-							<li>
-								<h3>Phone</h3>
-								<span>(000) 000-0000</span>
-							</li>
-							-->
 							<li>
 								<h3>Social</h3>
 								<ul class="icons">
