Updated image sizing, changed website name

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<link rel="icon" type="image/png" href="/images/brazafraza.png">
-	<title>BRAZAFRAZA</title>
+	<title>Brodie Frazier</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -30,7 +30,7 @@
 		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
 				<h1>
-					BRAZAFRAZA <img src="/images/brazafraza.png" alt="Favicon" style="float: right; width: 160px; height: 160px;">
+					BRAZA FRAZA <img src="/images/brazafraza.png" alt="Favicon" style="float: right; width: 160px; height: 160px;">
 					
 				</h1>
 				<p>Welcome to my site! My name is Brodie Frazier, an indie game developer specializing in design and production. This website is still under construction, but I'm working on some exciting projects! Check them out on my <a href="https://brodie-frazier.itch.io">itch.io page</a> for now!</p>
