Removed send message section

--- a/index.html
+++ b/index.html
@@ -87,29 +87,8 @@
 		<section id="three" class="wrapper style1 fade-up">
 			<div class="inner">
 				<h2>Get in touch</h2>
-				<p>If you'd like to connect, feel free to reach out! You can also find me on my social media links below.</p>
-				<div class="split style1">
-					<section>
-						<form method="post" action="mailto:brodiefrazier@gmail.com" enctype="text/plain">
-							<div class="fields">
-								<div class="field half">
-									<label for="name">Name</label>
-									<input type="text" name="name" id="name" />
-								</div>
-								<div class="field half">
-									<label for="email">Email</label>
-									<input type="text" name="email" id="email" />
-								</div>
-								<div class="field">
-									<label for="message">Message</label>
-									<textarea name="message" id="message" rows="5"></textarea>
-								</div>
-							</div>
-							<ul class="actions">
-								<li><a href="#" class="button submit">Send Message</a></li>
-							</ul>
-						</form>
-					</section>
+				<p>If you'd like to connect, feel free to reach out to my email! You can also find me on my social media links below.</p>
+				
 					<section>
 						<ul class="contact">
 							<li>
