Updated flavicon, added 2 new games

--- a/index.html
+++ b/index.html
@@ -42,6 +42,21 @@
 
 		<!-- Projects Section -->
 		<section id="one" class="wrapper style2 spotlights">
+
+			<section>
+				<a href="#" class="image"><img src="images/pic04.jpg" alt="Project Image" data-position="center center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Sync & Ecco</h2>
+						<h3>Designer, Producer</h3>
+						<p>Custom engine asymmetrical co-op puzzle combat game!</p>
+						<ul class="actions">
+							<li><a href="https://basalt-formations.itch.io/sync-and-ecco" class="button" target="_blank">Coming Soon!</a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+
 			<section>
 				<a href="#" class="image"><img src="images/pic01.jpg" alt="Project Image" data-position="center center" /></a>
 				<div class="content">
@@ -50,33 +65,46 @@
 						<h3>Lead Designer, Producer</h3>
 						<p>Beat your friends down in this string puppet fighting game!</p>
 						<ul class="actions">
-							<li><a href="https://locstock.itch.io/no-strings-attached" class="button" target="_blank">Learn more</a></li>
+							<li><a href="https://locstock.itch.io/no-strings-attached" class="button" target="_blank">Itch.io page</a></li>
 						</ul>
 					</div>
 				</div>
 			</section>
 			<section>
-				<a href="#" class="image"><img src="images/pic02.jpg" alt="Project Image" data-position="top center" /></a>
+				<a href="#" class="image"><img src="images/pic02.jpg" alt="Project Image" data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>Mind's Isle</h2>
 						<h3>Solo project</h3>
 						<p>Explore and survive on the mind's isle in this sandbox survival game.</p>
 						<ul class="actions">
-							<li><a href="https://brodie-frazier.itch.io/minds-isle" class="button" target="_blank">Learn more</a></li>
+							<li><a href="https://brodie-frazier.itch.io/minds-isle" class="button" target="_blank">Itch.io page</a></li>
 						</ul>
 					</div>
 				</div>
 			</section>
 			<section>
-				<a href="#" class="image"><img src="images/pic03.jpg" alt="Project Image" data-position="25% 25%" /></a>
+				<a href="#" class="image"><img src="images/pic05.jpg" alt="Project Image" data-position="center center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Beeranged</h2>
+						<h3>Solo project</h3>
+						<p>Defend yourself from an endless swarm of bees and defeat the queen!</p>
+						<ul class="actions">
+							<li><a href="https://brodie-frazier.itch.io/beeranged" class="button" target="_blank">Itch.io page</a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+			<section>
+				<a href="#" class="image"><img src="images/pic03.jpg" alt="Project Image" data-position="center center" /></a>
 				<div class="content">
 					<div class="inner">
 						<h2>Final Hour</h2>
 						<h3>Level Designer, Sound Designer</h3>
 						<p>A spaceship drifting, a man in an escape pod, a crew on edge. All you have is these last few hours to solve it all.</p>
 						<ul class="actions">
-							<li><a href="https://gaivaige.itch.io/final-hour" class="button" target="_blank">Learn more</a></li>
+							<li><a href="https://gaivaige.itch.io/final-hour" class="button" target="_blank">Itch.io page</a></li>
 						</ul>
 					</div>
 				</div>
