Updated contact section

--- a/index.html
+++ b/index.html
@@ -114,17 +114,18 @@
 		<!-- Contact Section -->
 		<section id="three" class="wrapper style1 fade-up">
 			<div class="inner">
-				<h2>Get in touch</h2>
-				<p>If you'd like to connect, feel free to reach out to my email! You can also find me on my social media links below.</p>
+				<h2>Contact me</h2>
+				<p>If you'd like to connect, feel free to reach out to my email! You can also find me on my social media links below. </p>
+
 				
 					<section>
 						<ul class="contact">
 							<li>
-								<h3>Email</h3>
+							
 								<a href="mailto:brodiefrazier@gmail.com">brodiefrazier@gmail.com</a>
 							</li>
 							<li>
-								<h3>Social</h3>
+								<h3>Socials</h3>
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/in/brodie-frazier-a5a384294/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/brazafraza" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
