--- a/index.html
+++ b/index.html
@@ -14,32 +14,28 @@
 			display: inline-block;
 			position: relative;
 		}
-
-			.hover-image img {
-				transition: opacity 0.3s ease;
-			}
-
-			.hover-image:hover img {
-				opacity: 0;
-			}
-
-			.hover-image::after {
-				content: "";
-				position: absolute;
-				top: 0;
-				right: 0;
-				width: 160px;
-				height: 160px;
-				background-image: url("/images/brazafrazagear5.png");
-				background-size: cover;
-				background-position: center;
-				opacity: 0;
-				transition: opacity 0.3s ease;
-			}
-
-			.hover-image:hover::after {
-				opacity: 1;
-			}
+		.hover-image img {
+			transition: opacity 0.3s ease;
+		}
+		.hover-image:hover img {
+			opacity: 0;
+		}
+		.hover-image::after {
+			content: "";
+			position: absolute;
+			top: 0;
+			right: 0;
+			width: 160px;
+			height: 160px;
+			background-image: url("/images/brazafrazagear5.png");
+			background-size: cover;
+			background-position: center;
+			opacity: 0;
+			transition: opacity 0.3s ease;
+		}
+		.hover-image:hover::after {
+			opacity: 1;
+		}
 	</style>
 </head>
 <body class="is-preload">
@@ -78,7 +74,7 @@
 
 		<!-- Projects Section -->
 		<section id="one" class="wrapper style2 spotlights">
-			<!-- Project Sections (existing content) -->
+
 			<section>
 				<a href="#" class="image"><img src="images/pic04.jpg" alt="Project Image" data-position="center center" /></a>
 				<div class="content">
@@ -92,7 +88,7 @@
 					</div>
 				</div>
 			</section>
-			<!-- Other Project Sections... -->
+
 			<section>
 				<a href="#" class="image"><img src="images/pic01.jpg" alt="Project Image" data-position="center center" /></a>
 				<div class="content">
@@ -106,8 +102,45 @@
 					</div>
 				</div>
 			</section>
-			<!-- Remaining Project Sections -->
-			<!-- (Add your other projects here) -->
+			<section>
+				<a href="#" class="image"><img src="images/pic02.jpg" alt="Project Image" data-position="center center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Mind's Isle</h2>
+						<h3>Solo project</h3>
+						<p>Explore and survive on the mind's isle in this sandbox survival game.</p>
+						<ul class="actions">
+							<li><a href="https://brodie-frazier.itch.io/minds-isle" class="button" target="_blank">Itch.io page</a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+			<section>
+				<a href="#" class="image"><img src="images/pic05.jpg" alt="Project Image" data-position="center center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Beeranged</h2>
+						<h3>Solo project</h3>
+						<p>Defend yourself from an endless swarm of bees and defeat the queen!</p>
+						<ul class="actions">
+							<li><a href="https://brodie-frazier.itch.io/beeranged" class="button" target="_blank">Itch.io page</a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+			<section>
+				<a href="#" class="image"><img src="images/pic03.jpg" alt="Project Image" data-position="center center" /></a>
+				<div class="content">
+					<div class="inner">
+						<h2>Final Hour</h2>
+						<h3>Level Designer, Sound Designer</h3>
+						<p>A spaceship drifting, a man in an escape pod, a crew on edge. All you have is these last few hours to solve it all.</p>
+						<ul class="actions">
+							<li><a href="https://gaivaige.itch.io/final-hour" class="button" target="_blank">Itch.io page</a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
 		</section>
 
 		<!-- Contact Section -->
