--- a/index.html
+++ b/index.html
@@ -13,29 +13,15 @@
 		.hover-image {
 			display: inline-block;
 			position: relative;
-		}
-		.hover-image img {
-			transition: opacity 0.3s ease;
-		}
-		.hover-image:hover img {
-			opacity: 0;
-		}
-		.hover-image::after {
-			content: "";
-			position: absolute;
-			top: 0;
-			right: 0;
 			width: 160px;
 			height: 160px;
-			background-image: url("/images/brazafrazagear5.png");
-			background-size: cover;
-			background-position: center;
-			opacity: 0;
-			transition: opacity 0.3s ease;
 		}
-		.hover-image:hover::after {
-			opacity: 1;
-		}
+
+			.hover-image img {
+				width: 100%;
+				height: 100%;
+				transition: opacity 0.3s ease;
+			}
 	</style>
 </head>
 <body class="is-preload">
@@ -61,8 +47,8 @@
 			<div class="inner">
 				<h1>
 					BRAZA FRAZA
-					<div class="hover-image" style="float: right; width: 160px; height: 160px;">
-						<img src="/images/brazafraza.png" alt="Favicon" style="width: 160px; height: 160px;">
+					<div class="hover-image" style="float: right;">
+						<img src="/images/brazafraza.png" alt="Favicon" id="mainImage">
 					</div>
 				</h1>
 				<p>Welcome to my site! My name is Brodie Frazier, an indie game developer specializing in design and production. This website is still under construction, but I'm working on some exciting projects! Check them out on my <a href="https://brodie-frazier.itch.io">itch.io page</a> for now!</p>
@@ -75,8 +61,11 @@
 		<!-- Projects Section -->
 		<section id="one" class="wrapper style2 spotlights">
 
+			<!-- Project 1 -->
 			<section>
-				<a href="#" class="image"><img src="images/pic04.jpg" alt="Project Image" data-position="center center" /></a>
+				<a href="https://basalt-formations.itch.io/sync-and-ecco" class="image" target="_blank">
+					<img src="images/pic04.jpg" alt="Project Image" data-position="center center" />
+				</a>
 				<div class="content">
 					<div class="inner">
 						<h2>Sync & Ecco</h2>
@@ -89,8 +78,11 @@
 				</div>
 			</section>
 
+			<!-- Project 2 -->
 			<section>
-				<a href="#" class="image"><img src="images/pic01.jpg" alt="Project Image" data-position="center center" /></a>
+				<a href="https://locstock.itch.io/no-strings-attached" class="image" target="_blank">
+					<img src="images/pic01.jpg" alt="Project Image" data-position="center center" />
+				</a>
 				<div class="content">
 					<div class="inner">
 						<h2>No Strings Attached</h2>
@@ -102,8 +94,12 @@
 					</div>
 				</div>
 			</section>
+
+			<!-- Project 3 -->
 			<section>
-				<a href="#" class="image"><img src="images/pic02.jpg" alt="Project Image" data-position="center center" /></a>
+				<a href="https://brodie-frazier.itch.io/minds-isle" class="image" target="_blank">
+					<img src="images/pic02.jpg" alt="Project Image" data-position="center center" />
+				</a>
 				<div class="content">
 					<div class="inner">
 						<h2>Mind's Isle</h2>
@@ -115,8 +111,12 @@
 					</div>
 				</div>
 			</section>
+
+			<!-- Project 4 -->
 			<section>
-				<a href="#" class="image"><img src="images/pic05.jpg" alt="Project Image" data-position="center center" /></a>
+				<a href="https://brodie-frazier.itch.io/beeranged" class="image" target="_blank">
+					<img src="images/pic05.jpg" alt="Project Image" data-position="center center" />
+				</a>
 				<div class="content">
 					<div class="inner">
 						<h2>Beeranged</h2>
@@ -128,8 +128,12 @@
 					</div>
 				</div>
 			</section>
+
+			<!-- Project 5 -->
 			<section>
-				<a href="#" class="image"><img src="images/pic03.jpg" alt="Project Image" data-position="center center" /></a>
+				<a href="https://gaivaige.itch.io/final-hour" class="image" target="_blank">
+					<img src="images/pic03.jpg" alt="Project Image" data-position="center center" />
+				</a>
 				<div class="content">
 					<div class="inner">
 						<h2>Final Hour</h2>
@@ -141,7 +145,9 @@
 					</div>
 				</div>
 			</section>
+
 		</section>
+
 
 		<!-- Contact Section -->
 		<section id="three" class="wrapper style1 fade-up">
@@ -183,6 +189,27 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
+
+	<!-- Custom Hover Effect JavaScript -->
+	<script>
+		document.addEventListener('DOMContentLoaded', function () {
+			const mainImage = document.getElementById('mainImage');
+			const imageOptions = [
+				'/images/brazafrazagear5.png',
+				'/images/brazafrazaflamingo.png'  
+			];
+
+			mainImage.addEventListener('mouseenter', () => {
+				const randomImage = imageOptions[Math.floor(Math.random() * imageOptions.length)];
+				mainImage.dataset.originalSrc = mainImage.src; 
+				mainImage.src = randomImage;
+			});
+
+			mainImage.addEventListener('mouseleave', () => {
+				mainImage.src = mainImage.dataset.originalSrc; 
+			});
+		});
+	</script>
 
 </body>
 </html>
