Updated "Coming soon!" buttons

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<img src="/images/brazafraza.png" alt="Favicon" id="mainImage">
 					</div>
 				</h1>
-				<p>Hey there! My name is Brodie Frazier, I'm an indie game developer. <br> I'm currently studying game design and production at at AIE in Melbourne, focusing on building my portfolio and expanding my skill set. I have a versatile design background with working design, sound, programming and a little bit of art. This website is still under construction, but I'm working on some exciting projects! Check them out on my <a href="https://brodie-frazier.itch.io">itch.io page</a> for now!</p>
+				<p>Hey there! My name is Brodie Frazier, I'm an indie game developer. <br> <br> I'm currently studying game design and production at at AIE in Melbourne, focusing on building my portfolio and expanding my skill set. I have a versatile design background with working design, sound, programming and a little bit of art. This website is still under construction, but I'm working on some exciting projects! Check them out on my <a href="https://brodie-frazier.itch.io">itch.io page</a> for now!</p>
 				<ul class="actions">
 					<li><a href="#one" class="button scrolly">Learn more</a></li>
 				</ul>
@@ -72,6 +72,7 @@
 						<h3>Designer, Producer</h3>
 						<p>Custom engine asymmetrical co-op puzzle combat game!</p>
 						<ul class="actions">
+							<li><a href="https://basalt-formations.itch.io/sync-and-ecco" class="button" target="_blank">Coming Soon!</a></li>
 							<li><a href="https://basalt-formations.itch.io/sync-and-ecco" class="button" target="_blank">Coming Soon!</a></li>
 						</ul>
 					</div>
@@ -107,8 +108,10 @@
 						<h2>Beeranged</h2>
 						<h3>Solo project</h3>
 						<p>Defend yourself from an endless swarm of bees and defeat the queen!</p>
+
 						<ul class="actions">
-							<li><a href="https://brodie-frazier.itch.io/beeranged" class="button" target="_blank">Itch.io page</a></li>
+							<li><a href="https://brodie-frazier.itch.io/beeranged" class="button" target="_blank">Coming Soon!</a></li>
+							<li><a href="https://brodie-frazier.itch.io/beeranged" class="button" target="_blank">Itch.io</a></li>
 						</ul>
 					</div>
 				</div>
@@ -124,6 +127,7 @@
 						<h3>Solo project</h3>
 						<p>Explore and survive on the mind's isle in this sandbox survival game.</p>
 						<ul class="actions">
+							<li><a href="https://brodie-frazier.itch.io/minds-isle" class="button" target="_blank">Coming soon!</a></li>
 							<li><a href="https://brodie-frazier.itch.io/minds-isle" class="button" target="_blank">Itch.io page</a></li>
 						</ul>
 					</div>
@@ -141,6 +145,7 @@
 						<h3>Level Designer, Sound Designer</h3>
 						<p>A spaceship drifting, a man in an escape pod, a crew on edge. All you have is these last few hours to solve it all.</p>
 						<ul class="actions">
+							<li><a href="https://gaivaige.itch.io/final-hour" class="button" target="_blank">Coming soon!</a></li>
 							<li><a href="https://gaivaige.itch.io/final-hour" class="button" target="_blank">Itch.io page</a></li>
 						</ul>
 					</div>
