--- a/index.html
+++ b/index.html
@@ -202,7 +202,9 @@
 			const mainImage = document.getElementById('mainImage');
 			const imageOptions = [
 				'/images/brazafrazagear5.png',
-				'/images/brazafrazaflamingo.png'
+				'/images/brazafrazaflamingo.png',
+				'/images/brazafrazachigo.png'
+				
 			];
 
 			mainImage.addEventListener('mouseenter', () => {
