Added devlog to beeranged

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
 						<p>Defend yourself from an endless swarm of bees and defeat the queen!</p>
 
 						<ul class="actions">
-							<li><a href="https://brodie-frazier.itch.io/beeranged" class="button" target="_blank">Coming Soon!</a></li>
-							<li><a href="https://brodie-frazier.itch.io/beeranged" class="button" target="_blank">Itch.io</a></li>
+							<li><a href="C:\Users\Brodie Frazier\Desktop\brazafraza.dev\brazafraza.dev\beeranged.html" class="button" target="_blank">MORE</a></li>
+							<li><a href="https://brodie-frazier.itch.io/beeranged" class="button" target="_blank">DOWNLOAD!</a></li>
 						</ul>
 					</div>
 				</div>
