Trying to fix link

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 						<p>Defend yourself from an endless swarm of bees and defeat the queen!</p>
 
 						<ul class="actions">
-							<li><a href="brazafraza.dev\beeranged.html" class="button" target="_blank">MORE</a></li>
+							<li><a href="beeranged.html" class="button" target="_blank">MORE</a></li>
 							<li><a href="https://brodie-frazier.itch.io/beeranged" class="button" target="_blank">DOWNLOAD!</a></li>
 						</ul>
 					</div>
