Link devlog (fr this time)

--- a/beeranged.html
+++ b/beeranged.html
@@ -61,7 +61,7 @@
                     Overall, I'm very happy with the outcome of the project and was able to advanced my c# skills :)
                 </p>
                 <ul class="actions">
-                    <li><a href="C:\Users\Brodie Frazier\Desktop\brazafraza.dev\brazafraza.dev\beerangedDL1.html" class="button" target="_blank">VIEW</a></li>
+                    <li><a href="beerangedDL1.html" class="button" target="_blank">VIEW</a></li>
                 </ul>
             </div>
         </section>
