Updated flavicon and sprites no longer stretch

--- a/beerangedDL1.html
+++ b/beerangedDL1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <link rel="icon" type="image/png" href="/images/brazafrazabeeranged">
+    <link rel="icon" type="image/png" href="/images/brazafrazabeeranged.png">
     <title>Brodie Frazier</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -60,7 +60,7 @@
                     So what's been updated since the release? I've started experimenting with sprite art and these are my first designs for the player, the smoke clouds (bullets) and the enemies. I've done some minor bug fixes, UI polish and changed the dev keys too so if hitting 4 will no longer make you max level, if you hit enough buttons I'm sure you'll figure out how to do it again though :) This marks the first update in what I hope will be a long, rewarding experience as I'm excited to keep adding more in the future. Check out my first attempts at sprite art below!
                     <br><br>
                         <div class="sprite-gallery">
-                            <img src="/images/Beeranged/BeekeeperArmUpGunSpirte" />
+                            <img src="/images/Beeranged/BeekeeperArmUpGunSpirte.png" />
                             <img src="/images/Beeranged/BeekeerpSpirteGunDown.png" />
                             <img src="/images/Beeranged/BumbleBee_Sprite.png" />
                             <img src="/images/Beeranged/EvilBee_Sprite.png" />
