--- a/beeranged.html
+++ b/beeranged.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <link rel="icon" type="image/png" href="/images/brazafrazabeeranged">
+    <link rel="icon" type="image/png" href="/images/brazafrazabeeranged.png">
     <title>Brodie Frazier</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -118,7 +118,8 @@
                 const imageOptions = [
                     '/images/brazafrazagear5.png',
                     '/images/brazafrazaflamingo.png',
-                    '/images/brazafrazachigo.png'
+                    '/images/brazafrazachigo.png',
+                    '/images/brazafrazabeeranged.png'
 
                 ];
 
