--- a/beerangedDL1.html
+++ b/beerangedDL1.html
@@ -74,7 +74,7 @@
                                 <img src="/images/Beeranged/EvilBee_Sprite.png" alt="Sprite 4" class="sprite">
                             </div>
                             <div class="sprite-container">
-                                <img src="/images/Beeranged/EvilBeeMwga_Sprite.png" alt="Sprite 5" class="sprite">
+                                <img src="/images/Beeranged/EvilBeeMega_Sprite.png" alt="Sprite 5" class="sprite">
                             </div>
                             <div class="sprite-container">
                                 <img src="/images/Beeranged/QueenBee_Sprite.png" alt="Sprite 6" class="sprite">
@@ -85,7 +85,7 @@
                     Cheers <br /> - Braza :)
                 </p>
                 <ul class="actions">
-                    <li><a href="#one" class="button scrolly">DOWNLOAD</a></li>
+                    <li><a href="#one" class="https://brodie-frazier.itch.io/beeranged">DOWNLOAD</a></li>
                 </ul>
             </div>
         </section>
