Download link on beeranged

--- a/beerangedDL1.html
+++ b/beerangedDL1.html
@@ -85,7 +85,8 @@
                     Cheers <br /> - Braza :)
                 </p>
                 <ul class="actions">
-                    <li><a href="#one" class="https://brodie-frazier.itch.io/beeranged">DOWNLOAD</a></li>
+                    <li><a href="https://brodie-frazier.itch.io/beeranged" class="button" target="_blank">Download</a></li>
+
                 </ul>
             </div>
         </section>
