--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
 		<div class="inner">
 			<ul class="menu">
 				<li>&copy; BRAZAFRAZA. All rights reserved.</li>
+				<li>Background: <a href="https://www.deviantart.com/lemmino/art/Cinemagraph-Rainy-Days-475366802">LEMMiNO</a></li>
 				<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 			</ul>
 		</div>
