Added new project pages for all remaining projects

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 						<h3>Designer, Producer</h3>
 						<p>Custom engine asymmetrical co-op puzzle combat game!</p>
 						<ul class="actions">
-							<li><a href="https://basalt-formations.itch.io/sync-and-ecco" class="button" target="_blank">Coming Soon!</a></li>
-							<li><a href="https://basalt-formations.itch.io/sync-and-ecco" class="button" target="_blank">Coming Soon!</a></li>
+							<li><a href="syncandecco.html" class="button" target="_blank">Project page</a></li>
+							<li><a href="https://basalt-formations.itch.io/sync-and-ecco" class="button" target="_blank">Coming soon!</a></li>
 						</ul>
 					</div>
 				</div>
@@ -90,7 +90,8 @@
 						<h3>Lead Designer, Producer</h3>
 						<p>Beat your friends down in this string puppet fighting game!</p>
 						<ul class="actions">
-							<li><a href="https://locstock.itch.io/no-strings-attached" class="button" target="_blank">Itch.io page</a></li>
+							<li><a href="nostringsattached.html" class="button" target="_blank">Project page</a></li>
+							<li><a href="https://locstock.itch.io/no-strings-attached" class="button" target="_blank">Download!</a></li>
 						</ul>
 					</div>
 				</div>
@@ -127,8 +128,8 @@
 						<h3>Solo project</h3>
 						<p>Explore and survive on the mind's isle in this sandbox survival game.</p>
 						<ul class="actions">
-							<li><a href="https://brodie-frazier.itch.io/minds-isle" class="button" target="_blank">Coming soon!</a></li>
-							<li><a href="https://brodie-frazier.itch.io/minds-isle" class="button" target="_blank">Itch.io page</a></li>
+							<li><a href="mindsisle.html" class="button" target="_blank">Project page</a></li>
+							<li><a href="https://brodie-frazier.itch.io/minds-isle" class="button" target="_blank">download!</a></li>
 						</ul>
 					</div>
 				</div>
@@ -145,8 +146,8 @@
 						<h3>Level Designer, Sound Designer</h3>
 						<p>A spaceship drifting, a man in an escape pod, a crew on edge. All you have is these last few hours to solve it all.</p>
 						<ul class="actions">
-							<li><a href="https://gaivaige.itch.io/final-hour" class="button" target="_blank">Coming soon!</a></li>
-							<li><a href="https://gaivaige.itch.io/final-hour" class="button" target="_blank">Itch.io page</a></li>
+							<li><a href="finalhour.html" class="button" target="_blank">Project page</a></li>
+							<li><a href="https://gaivaige.itch.io/final-hour" class="button" target="_blank">download!</a></li>
 						</ul>
 					</div>
 				</div>
