Updated sync and ecco icons

--- a/syncandecco.html
+++ b/syncandecco.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <link rel="icon" type="image/png" href="/images/brazafrazabeeranged.png">
+    <link rel="icon" type="image/png" href="/images/brazafrazaecco.png">
     <title>Brodie Frazier</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -131,7 +131,8 @@
                 const mainImage = document.getElementById('mainImage');
                 const imageOptions = [
                  
-                    '/images/brazafrazabeeranged.png'
+                    '/images/brazafrazasync.png',
+                    '/images/brazafrazaecco.png'
 
                 ];
 
