Fixed wrong link, updated itch icon

--- a/finalhour.html
+++ b/finalhour.html
@@ -77,7 +77,7 @@
                     Overall, I'm very happy with the outcome of the project and was able to advanced my c# skills :)
                 </p>
                 <ul class="actions">
-                    <li><a href=" https://brodie-frazier.itch.io/beeranged" class="button" target="_blank">DOWNLOAD</a></li>
+                    <li><a href=" https://gaivaige.itch.io/final-hour" class="button" target="_blank">DOWNLOAD</a></li>
                 </ul>
             </div>
         </section>
