--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
 					</div>
 				</h1>
 				<p>Hey there! My name is Brodie Frazier, I'm an indie game developer. <br> <br> I'm currently studying game design and production at at AIE in Melbourne, focusing on building my portfolio and expanding my skill set. I have a versatile design background with having done work on design, sound, programming and a little bit of art. This website is still under construction, but I'm working on some exciting projects! Check them out on my <a href="https://brodie-frazier.itch.io">itch.io page</a> for now!</p>
-				<ul class="actions">
-					<li><a href="#one" class="button scrolly">Learn more</a></li>
-				</ul>
+				
 			</div>
 		</section>
 
@@ -169,7 +167,7 @@
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/brodie-frazier-a5a384294/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/brazafraza" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="https://brodie-frazier.itch.io" class="icon solid fa-gamepad"><span class="label">Itch.io</span></a></li>
+								<li><a href="https://brodie-frazier.itch.io" class="icon brands fa-itch-io"><span class="label">Itch.io</span></a></li>
 							</ul>
 						</li>
 					</ul>
