--- a/finalhour.html
+++ b/finalhour.html
@@ -74,7 +74,10 @@
                     Created for the 1-Bit Game Jam! The theme was 'You start with everything, and end with nothing,' so we wrote that idea into our story. We hope you enjoy the game!
 
 
-                    Overall, I'm very happy with the outcome of the project and was able to advanced my c# skills :)
+                   
+                        <div class="sprite-container">
+                            <img src="/images/FinalHour/LevelDesign.png" alt="Sprite 1" class="sprite">
+                        </div>
                 </p>
                 <ul class="actions">
                     <li><a href=" https://gaivaige.itch.io/final-hour" class="button" target="_blank">DOWNLOAD</a></li>
