--- a/finalhour.html
+++ b/finalhour.html
@@ -66,18 +66,50 @@
                 <p>
                     <br /> Following a mission, the USS Chekibundi locked itself down. Samson, one of its officers, locked himself in the escape pod. The crew are at risk of dying, some already have, and he'll leave at the first sign he has to.
 
-                    <br>
-                    Speak to your friends, find the truth.
+
+                    <br>Speak to your friends, find the truth. <br>This game was created for the 1-Bit Game Jam! The theme was "You start with everything, and end with nothing!"
                     <br>
                     <br>
 
-                    Created for the 1-Bit Game Jam! The theme was 'You start with everything, and end with nothing,' so we wrote that idea into our story. We hope you enjoy the game!
+
+                    <h4> DEVELOPMENT: LEVEL </h4>
+                    Approaching this project, I worked closely with the narrative designer asking heaps of questions regarding game and enviornmental context. After discussions and reading over the script three times, I created a list of my own restraints for designing this level.<br> They are as follows:
+                    <br> - Must take place on spaceship
+                    <br> - Must have several personal rooms for characters
+                    <br> - Must show signs that there had been more people in the spaceship before the events of the game take place
+                    <br> - Must have a central area connecting to all key areas.
+
+                    <br><br>These are the first sketches created for the level design. I took heavy inspiration from spaceships in Star Wars, Cowboy Bebop and Rick and Morty. I really liked the tight mechanically feel, not being to over futuristic and having the retro sci fi feel.
+                        <br><br> Inspirations
+                    <div class="sprite-container">
+                        <img src="/images/FinalHour/Falcon.png" alt="Sprite 1" class="sprite">
+                    </div>
+                    <div class="sprite-container">
+                        <img src="/images/FinalHour/Cowboy1.png" alt="Sprite 1" class="sprite">
+                    </div>
+                    <div class="sprite-container">
+                        <img src="/images/FinalHour/Citadel.png" alt="Sprite 1" class="sprite">
+                    </div>
+                    <br> My sketches
+                    <div class="sprite-container">
+                        <img src="/images/FinalHour/Sketch1.png" alt="Sprite 1" class="sprite">
+                    </div>
+                    <div class="sprite-container">
+                        <img src="/images/FinalHour/Sketch2.png" alt="Sprite 1" class="sprite">
+                    </div>
+                    <div class="sprite-container">
+                        <img src="/images/FinalHour/Sketch3.png" alt="Sprite 1" class="sprite">
+                    </div>
+                    <br><br> As this was a 1 week jam, I didn't have a lot of time for iteration so I stuck with the initial concept. This is the first digital draft created of the level design.
 
 
-                   
-                        <div class="sprite-container">
-                            <img src="/images/FinalHour/LevelDesign.png" alt="Sprite 1" class="sprite">
-                        </div>
+                    <div class="sprite-container">
+                        <img src="/images/FinalHour/LevelDesign.png" alt="Sprite 1" class="sprite">
+                    </div>
+
+                    <h4> DEVELOPMENT: SOUND </h4>
+                    I created all the sound effects for this projects excluding the music, who was made by John Sharp.
+
                 </p>
                 <ul class="actions">
                     <li><a href=" https://gaivaige.itch.io/final-hour" class="button" target="_blank">DOWNLOAD</a></li>
