Fixed image types

--- a/finalhour.html
+++ b/finalhour.html
@@ -80,25 +80,25 @@
                     <br> - Must have a central area connecting to all key areas.
 
                     <br><br>These are the first sketches created for the level design. I took heavy inspiration from spaceships in Star Wars, Cowboy Bebop and Rick and Morty. I really liked the tight mechanically feel, not being to over futuristic and having the retro sci fi feel.
-                        <br><br> Inspirations
+                    <br><br> Inspirations
                     <div class="sprite-container">
-                        <img src="/images/FinalHour/Falcon.png" alt="Sprite 1" class="sprite">
+                        <img src="/images/FinalHour/Falcon.jpg" alt="Sprite 1" class="sprite">
                     </div>
                     <div class="sprite-container">
-                        <img src="/images/FinalHour/Cowboy1.png" alt="Sprite 1" class="sprite">
+                        <img src="/images/FinalHour/Cowboy1.jpg" alt="Sprite 1" class="sprite">
                     </div>
                     <div class="sprite-container">
-                        <img src="/images/FinalHour/Citadel.png" alt="Sprite 1" class="sprite">
+                        <img src="/images/FinalHour/Citadel.jpg" alt="Sprite 1" class="sprite">
                     </div>
                     <br> My sketches
                     <div class="sprite-container">
-                        <img src="/images/FinalHour/Sketch1.png" alt="Sprite 1" class="sprite">
+                        <img src="/images/FinalHour/Sketch1.jpg" alt="Sprite 1" class="sprite">
                     </div>
                     <div class="sprite-container">
-                        <img src="/images/FinalHour/Sketch2.png" alt="Sprite 1" class="sprite">
+                        <img src="/images/FinalHour/Sketch2.jpg" alt="Sprite 1" class="sprite">
                     </div>
                     <div class="sprite-container">
-                        <img src="/images/FinalHour/Sketch3.png" alt="Sprite 1" class="sprite">
+                        <img src="/images/FinalHour/Sketch3.jpg" alt="Sprite 1" class="sprite">
                     </div>
                     <br><br> As this was a 1 week jam, I didn't have a lot of time for iteration so I stuck with the initial concept. This is the first digital draft created of the level design.
 
@@ -106,7 +106,7 @@
                     <div class="sprite-container">
                         <img src="/images/FinalHour/LevelDesign.png" alt="Sprite 1" class="sprite">
                     </div>
-
+                    <br><br>
                     <h4> DEVELOPMENT: SOUND </h4>
                     I created all the sound effects for this projects excluding the music, who was made by John Sharp.
 
