--- a/finalhour.html
+++ b/finalhour.html
@@ -80,31 +80,38 @@
                     <br> - Must have a central area connecting to all key areas.
 
                     <br><br>These are the first sketches created for the level design. I took heavy inspiration from spaceships in Star Wars, Cowboy Bebop and Rick and Morty. I really liked the tight mechanically feel, not being to over futuristic and having the retro sci fi feel.
-                    <br><br> Inspirations
-                    <div class="sprite-container">
-                        <img src="/images/FinalHour/Falcon.jpg" alt="Sprite 1" class="sprite">
+                    <br><br> <h4>Inspirations</h4>
+                    <div class="sprite-grid">
+                        <div class="sprite-container">
+                            <img src="/images/FinalHour/Falcon.jpg" alt="Inspiration 1">
+                        </div>
+                        <div class="sprite-container">
+                            <img src="/images/FinalHour/Cowboy1.jpg" alt="Inspiration 2">
+                        </div>
+                        <div class="sprite-container">
+                            <img src="/images/FinalHour/Citadel.jpg" alt="Inspiration 3">
+                        </div>
                     </div>
-                    <div class="sprite-container">
-                        <img src="/images/FinalHour/Cowboy1.jpg" alt="Sprite 1" class="sprite">
-                    </div>
-                    <div class="sprite-container">
-                        <img src="/images/FinalHour/Citadel.jpg" alt="Sprite 1" class="sprite">
-                    </div>
-                    <br> My sketches
-                    <div class="sprite-container">
-                        <img src="/images/FinalHour/Sketch1.jpg" alt="Sprite 1" class="sprite">
-                    </div>
-                    <div class="sprite-container">
-                        <img src="/images/FinalHour/Sketch2.jpg" alt="Sprite 1" class="sprite">
-                    </div>
-                    <div class="sprite-container">
-                        <img src="/images/FinalHour/Sketch3.jpg" alt="Sprite 1" class="sprite">
+                    <br> <h4>My Sketches</h4>
+                    <div class="sprite-grid">
+                        <div class="sprite-container">
+                            <img src="/images/FinalHour/Sketch1.jpg" alt="Sketch 1">
+                        </div>
+                        <div class="sprite-container">
+                            <img src="/images/FinalHour/Sketch2.jpg" alt="Sketch 2">
+                        </div>
+                        <div class="sprite-container">
+                            <img src="/images/FinalHour/Sketch3.jpg" alt="Sketch 3">
+                        </div>
                     </div>
                     <br><br> As this was a 1 week jam, I didn't have a lot of time for iteration so I stuck with the initial concept. This is the first digital draft created of the level design.
 
 
-                    <div class="sprite-container">
-                        <img src="/images/FinalHour/LevelDesign.png" alt="Sprite 1" class="sprite">
+                    <h4>Final Level Design</h4>
+                    <div class="sprite-grid">
+                        <div class="sprite-container">
+                            <img src="/images/FinalHour/LevelDesign.png" alt="Level Design">
+                        </div>
                     </div>
                     <br><br>
                     <h4> DEVELOPMENT: SOUND </h4>
