--- a/finalhour.html
+++ b/finalhour.html
@@ -81,6 +81,7 @@
 
                     <br><br>These are the first sketches created for the level design. I took heavy inspiration from spaceships in Star Wars, Cowboy Bebop and Rick and Morty. I really liked the tight mechanically feel, not being to over futuristic and having the retro sci fi feel.
                     <br><br> <h4>Inspirations</h4>
+                    <h4>Inspirations</h4>
                     <div class="sprite-grid">
                         <div class="sprite-container">
                             <img src="/images/FinalHour/Falcon.jpg" alt="Inspiration 1">
@@ -92,6 +93,7 @@
                             <img src="/images/FinalHour/Citadel.jpg" alt="Inspiration 3">
                         </div>
                     </div>
+
                     <br> <h4>My Sketches</h4>
                     <div class="sprite-grid">
                         <div class="sprite-container">
@@ -104,10 +106,10 @@
                             <img src="/images/FinalHour/Sketch3.jpg" alt="Sketch 3">
                         </div>
                     </div>
-                    <br><br> As this was a 1 week jam, I didn't have a lot of time for iteration so I stuck with the initial concept. This is the first digital draft created of the level design.
+                    <br> As this was a 1 week jam, I didn't have a lot of time for iteration so I stuck with the initial concept. This is the first digital draft created of the level design.
 
 
-                    <h4>Final Level Design</h4>
+                    <br><h4>Final Level Design</h4>
                     <div class="sprite-grid">
                         <div class="sprite-container">
                             <img src="/images/FinalHour/LevelDesign.png" alt="Level Design">
