--- a/finalhour.html
+++ b/finalhour.html
@@ -109,7 +109,7 @@
                     <br> As this was a 1 week jam, I didn't have a lot of time for iteration so I stuck with the initial concept. This is the first digital draft created of the level design.
 
 
-                    <br><h4>Final Level Design</h4>
+                    <br><br><h4>Final Level Design</h4>
                     <div class="sprite-grid">
                         <div class="sprite-container">
                             <img src="/images/FinalHour/LevelDesign.png" alt="Level Design">
