--- a/finalhour.html
+++ b/finalhour.html
@@ -110,7 +110,11 @@
 
 
                     <br><br><h4>Final Level Design</h4>
-                            <img src="wrongname.LevelDesgin.png" alt="Level Map">
+                    <div class="sprite-grid">
+                        <div class="sprite-container">
+                            <img src="/images/FinalHour/LevelDesign.png" alt="Level Design">
+                        </div>
+                    </div>
                     <br><br>
                     <h4> DEVELOPMENT: SOUND </h4>
                     I created all the sound effects for this projects excluding the music, who was made by John Sharp.
