--- a/beerangedDL1.html
+++ b/beerangedDL1.html
@@ -59,7 +59,7 @@
                     <br><br>
                     So what's been updated since the release? I've started experimenting with sprite art and these are my first designs for the player, the smoke clouds (bullets) and the enemies. I've done some minor bug fixes, UI polish and changed the dev keys too so if hitting 4 will no longer make you max level, if you hit enough buttons I'm sure you'll figure out how to do it again though :) This marks the first update in what I hope will be a long, rewarding experience as I'm excited to keep adding more in the future. Check out my first attempts at sprite art below!
                     <br><br>
-                        <div>
+                        <div class="sprite-grid">
                             <div class="sprite-container">
                                 <img src="/images/Beeranged/BeekeeperArmUpGunSpirte.png" alt="Sprite 1" class="sprite">
                             </div>
