--- a/finalhour.html
+++ b/finalhour.html
@@ -73,15 +73,15 @@
 
 
                     <h4> DEVELOPMENT: LEVEL </h4>
-                    Approaching this project, I worked closely with the narrative designer asking heaps of questions regarding game and enviornmental context. After discussions and reading over the script three times, I created a list of my own restraints for designing this level.<br> They are as follows:
+                    Approaching this project, I worked closely with the narrative designer asking heaps of questions regarding game and enviornmental context. After discussions and reading over the script three times, I created a list of restraints for designing this level.<br><br> They are as follows:
                     <br> - Must take place on spaceship
                     <br> - Must have several personal rooms for characters
                     <br> - Must show signs that there had been more people in the spaceship before the events of the game take place
                     <br> - Must have a central area connecting to all key areas.
 
-                    <br><br>These are the first sketches created for the level design. I took heavy inspiration from spaceships in Star Wars, Cowboy Bebop and Rick and Morty. I really liked the tight mechanically feel, not being to over futuristic and having the retro sci fi feel.
+                    <br><br>These are the first sketches created for the level design. I took heavy inspiration from spaceships and architecture in Star Wars, Cowboy Bebop and Rick and Morty. I really liked the tight mechanically feel, not being to over futuristic and having the retro sci-fi feel. Below are some images I used as inspiration and my early paper sketches.
                     <br><br>
-                    <h4>Inspirations</h4>
+                    
                     <div class="sprite-grid">
                         <div class="sprite-container">
                             <img src="/images/FinalHour/Falcon.jpg" alt="Inspiration 1">
@@ -93,8 +93,8 @@
                             <img src="/images/FinalHour/Citadel.jpg" alt="Inspiration 3">
                         </div>
                     </div>
-
-                    <br> <h4>My Sketches</h4>
+                    <i>Inspirations</i>
+                    <br>
                     <div class="sprite-grid">
                         <div class="sprite-container">
                             <img src="/images/FinalHour/Sketch1.jpg" alt="Sketch 1">
@@ -106,19 +106,31 @@
                             <img src="/images/FinalHour/Sketch3.jpg" alt="Sketch 3">
                         </div>
                     </div>
-                    <br> As this was a 1 week jam, I didn't have a lot of time for iteration so I stuck with the initial concept. This is the first digital draft created of the level design.
+                    <i>Paper sketches</i>
 
 
-                    <br><br><h4>Final Level Design</h4>
+                    <br><br>
                     <div class="sprite-grid">
                         <div class="sprite-container">
                             <img src="/images/FinalHour/LevelDesign.png" alt="Level Design">
                         </div>
                     </div>
-                    <br><br>
-                    <h4> DEVELOPMENT: SOUND </h4>
-                    I created all the sound effects for this projects excluding the music, who was made by John Sharp.
+                    <i>Draft Desgin #1</i>
+                    <br><br> As this was a 1 week jam, I didn't have a lot of time for iteration so I stuck with the initial concept. This is the first rough draft created of the level design.
+                    This design was slightly altered after some feedback and slight gameplay changes.
 
+                    <br><br>
+                        <i>Greybox screenshots of the level (without the 1-bit shader)</i>  
+
+                    <br><br>
+                        <i>Screenshots of the final level design in game.</i>  
+
+
+                    <br><br><br><br>
+                    <h4> DEVELOPMENT: SOUND </h4>
+                    I made all the audio files for this projects excluding the music, who was made by John Sharp.
+                    <br><br>
+                    Creating the audio was a mix of recording sounds myself and using the SoundSnap library, finding sounds and editing them using audacity. After doing some research into game with lower bitrate sounds, I found an audacity plugin called Ring Modulator. Using this plugin, I was able to lower the bitrate for the audio files which gave them the crunchy sound you can hear in game. <br> Here are some examples of the audio below!
                 </p>
                 <ul class="actions">
                     <li><a href=" https://gaivaige.itch.io/final-hour" class="button" target="_blank">DOWNLOAD</a></li>
