--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
 				<a href="https://locstock.itch.io/no-strings-attached" class="image" target="_blank">
-					<img src="images/placeholderbanner.png" alt="Project Image" data-position="center center" style="width:1240px;height:488px;">
+					<img src="images/Placeholderbanner.png" alt="Banner Image" data-position="center center" style="width:1240px;height:488px;">
 				</a>
 				<h1>
 					
