--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 		<!-- Intro -->
 		<section id="intro" class="wrapper style1 fullscreen fade-up">
 			<div class="inner">
-				<a href="https://locstock.itch.io/no-strings-attached" class="image" target="_blank">
+				<a href="https://brazafraza.dev" class="image" target="_blank">
 					<img src="images/Placeholderbanner.png" alt="Banner Image" data-position="center center" style="width:1240px;height:488px;">
 				</a>
 				<h1>
 					
 					<div class="hover-image" style="float: right;">
-						<img src="/images/brazafraza.png" alt="Favicon" id="mainImage"class="favicon">
+						<img src="/images/brazafraza.png" alt="Favicon" id="mainImage">
 					</div>
 				</h1>
 				<p>Hey there! My name is Brodie Frazier, I'm an indie game developer. <br> <br> I'm currently studying game design and production at at AIE in Melbourne, focusing on building my portfolio and expanding my skill set. I have a versatile background with having done work on design, sound, programming and a little bit of art.<br /> This website is still under construction, but I'm working on some exciting projects! Check them out on my <a href="https://brodie-frazier.itch.io">itch.io page!</a></p>
