--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<h3>Designer, Producer</h3>
 						<p>Custom engine asymmetrical co-op puzzle combat game!</p>
 						<ul class="actions">
-							<li><a href="syncandecco.html" class="button" target="_blank">Project page</a></li>
+							<li><a href="syncandecco.html" class="button" target="_blank">Development page</a></li>
 							<li><a href="https://basalt-formations.itch.io/sync-and-ecco" class="button" target="_blank">Coming soon!</a></li>
 						</ul>
 					</div>
@@ -91,7 +91,7 @@
 						<h3>Lead Designer, Producer</h3>
 						<p>Beat your friends down in this string puppet fighting game!</p>
 						<ul class="actions">
-							<li><a href="nostringsattached.html" class="button" target="_blank">Project page</a></li>
+							<li><a href="nostringsattached.html" class="button" target="_blank">devlopment page</a></li>
 							<li><a href="https://locstock.itch.io/no-strings-attached" class="button" target="_blank">Download!</a></li>
 						</ul>
 					</div>
@@ -112,7 +112,7 @@
 						<p>Defend yourself from an endless swarm of bees and defeat the queen!</p>
 
 						<ul class="actions">
-							<li><a href="beeranged.html" class="button" target="_blank">PROJECT page</a></li>
+							<li><a href="beeranged.html" class="button" target="_blank">devlopment page</a></li>
 							<li><a href="https://brodie-frazier.itch.io/beeranged" class="button" target="_blank">DOWNLOAD!</a></li>
 						</ul>
 					</div>
@@ -129,7 +129,7 @@
 						<h3>Solo project</h3>
 						<p>Explore and survive on the mind's isle in this sandbox survival game.</p>
 						<ul class="actions">
-							<li><a href="mindsisle.html" class="button" target="_blank">Project page</a></li>
+							<li><a href="mindsisle.html" class="button" target="_blank">devlopment page</a></li>
 							<li><a href="https://brodie-frazier.itch.io/minds-isle" class="button" target="_blank">download!</a></li>
 						</ul>
 					</div>
@@ -147,7 +147,7 @@
 						<h3>Level Designer, Sound Designer</h3>
 						<p>A spaceship drifting, a man in an escape pod, a crew on edge. All you have is these last few hours to solve it all.</p>
 						<ul class="actions">
-							<li><a href="finalhour.html" class="button" target="_blank">Project page</a></li>
+							<li><a href="finalhour.html" class="button" target="_blank">devlopment page</a></li>
 							<li><a href="https://gaivaige.itch.io/final-hour" class="button" target="_blank">download!</a></li>
 						</ul>
 					</div>
